@@ -1,5 +1,12 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+6/29/10: Many Midas changes: added ability to refine shift with local
+cross-correlation and to load data binned.  Added tooltips.  For fixing
+montage overlaps, added spin buttons to select a piece by its X and Y frame
+number, adopted much faster method of computing piece shifts and improved
+estimate of shifts for very large montages, provided up to 10 buttons with
+highest edge errors, and handled skipped edges.
+
 6/26/10: Fixed problem with Ccderaser potentially not finding anything in
 difference search if nothing is examined in the peak search (In 4.1).
 
